# aoc2022

./: Cargo.toml
input/: demo_input1.txt
output/: day10output.txt  day1output.txt  day2output.txt  day3output.txt  day4output.txt  day5output.txt  day6output.txt  day7output.txt  day8output.txt  day9output.txt
src/: lib.rs  shared.rs
