[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.7.0"

[[bin]]
name="day1"
path="src/bin/day1.rs"

[[bin]]
name="day2"
path="src/bin/day2.rs"

[[bin]]
name="day3"
path="src/bin/day3.rs"

[[bin]]
name="day4"
path="src/bin/day4.rs"

[[bin]]
name="day5"
path="src/bin/day5.rs"

[[bin]]
name="day6"
path="src/bin/day6.rs"


[[bin]]
name="day8"
path="src/bin/day8.rs"

[[bin]]
name="day9"
path="src/bin/day9.rs"

[[bin]]
name="day12part2"
path="src/bin/day12part2.rs"

[[bin]]
name="day14"
path="src/bin/day14.rs"
